test/compile_errors/stage1/obj/bit_shifting_only_works_on_integer_types.zig
export fn entry() void {
    const x = &@as(u8, 1) << 10;
    _ = x;
}

// bit shifting only works on integer types
//
// tmp.zig:2:16: error: bit shifting operation expected integer type, found '*const u8'
